# python-project-49

./: .gitignore  Makefile  README.md  brain-calc  pyproject.toml
brain_games/: even_logic.py  game_engine.py
brain_games/games/: calc.py  calc_logic.py  even.py  even_logic.py  gcd.py  gcd_logic.py  prime.py  prime_logic.py  progression.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
