[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The first project in Hexlet's Python Software Developer course"
classifiers = [
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Framework :: Flake8"
]
repository = "https://github.com/Levon-Kharajyan/python-project-49"
authors = [
    "Levon Kharajyan <l.kharajyan@gmail.com>"
]
readme = "README.md"
packages = [{ include = "brain_games" }]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games:main"
brain-even = "brain_games.scripts.even:main"
brain-calc = "brain_games.scripts.calc:main"
brain-gcd = "brain_games.scripts.gcd:main"
brain-progression = "brain_games.scripts.progression:main"
brain-prime = "brain_games.scripts.prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
